# meet-to-action

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
src/: auth.py  dead_letter.py  health.py  idempotency.py  logging_config.py  pipeline.py  resilience.py
src/drive/: fetcher.py  watcher.py
src/gcal/: enricher.py
src/llm/: claude_client.py  prompt.py  schema.py
src/outputs/: asana.py  gmail.py  notion.py
src/scheduler/: main.py
tests/: conftest.py  test_dead_letter.py  test_health.py  test_pipeline.py  test_resilience.py  test_schema.py
tests/fixtures/: sample_transcript.txt
